[package]
name = "auction-simulator-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
rand = { version = "0.8", features = ["getrandom", "std"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "Document", "Window"] }
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
plotters = { version = "0.3", default-features = false, features = ["chrono", "line_series"] }
plotters-canvas = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
# The site root folder where index.html is
site-root = "target/site"
# The site package folder where CSS/JS will be served from
site-pkg-dir = "pkg"
# Tailwind input/output files
tailwind-input-file = "style/input.css"
tailwind-config-file = "tailwind.config.js"

[[bin]]
name = "auction-simulator-leptos"
path = "src/main.rs"